bun build script, remove gulpfile

--- a/web/src/styles.scss
+++ b/web/src/styles.scss
@@ -1,6 +1,6 @@
 @use "./variables";
-@use "trunks-ui"; // package path
-// @use "../../lib"; // local path
+// @use "trunks-ui"; // package path
+@use "../../lib"; // local path
 
 // Common configurations
 
